[workspace]
resolver = "2"
members = [
    #"npc1",
    #"npc2",
    "nps",
]

[profile.release]
strip = "symbols"
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"


[workspace.dependencies]
anyhow = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process", "fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["io"] }
#aws-lc-rs = { version = "1.13", features = ["prebuilt-nasm"] }
aws-lc-rs = { version = "*", features = ["prebuilt-nasm"] }
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
tokio-yamux = "0.3.5"
obfstr = "0.4.4"
parking_lot = "0.12"
once_cell = "1"
russh = "0.52"
russh-sftp = "2.1.1"
futures = "0.3"
async-trait = "0.1"
prost-build = "0.14"
bytes = "1"
url = "2.5"
screenshots = "0.6"
rand = "0.8"
log = "0.4"
tracing-subscriber = "0.3"
static_vcruntime = "2.0"
image = "0.24"
