[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[features]
default = ["http", "tcp", "kcp"]
http = ["reqwest"]
tcp = []
kcp = []

[dependencies]
tokio = { version = "1.36", default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.26"
url = "2.5"
anyhow = "1"
log = "0.4"
async-trait = "0.1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
parking_lot = "0.12"

pnet = { version = "0.35", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "http2", "socks", "rustls-tls","cookies"] }
hyper = { version = "0.14", optional = true, features = ["full"] }
tokio_kcp = { version = "0.9", optional = true }
tokio-tungstenite = { version = "0.27", optional = true, default-features = false, features = ["connect", "__rustls-tls"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
uuid = { version = "1.3", optional = true, features = ["v4"] }
bytes = { version = "1", optional = true, features = ["serde"] }
futures = { version = "0.3", optional = true }
