[package]
name = "transport"
version = "0.1.0"
edition = "2021"

[features]
default = []
http = ["reqwest","parking_lot","once_cell"]
tcp = []
kcp = ["tokio_kcp"]
ws = ["tokio-tungstenite","bytes","futures","tokio-util"]

[dependencies]
tokio = { version = "1.36", default-features = false, features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
tokio-rustls = "0.26"
url = "2.5"
anyhow = "1"
async-trait = "0.1"
log = "0.4"

once_cell = { version ="1", optional = true} 
parking_lot = { version = "0.12", optional = true} 
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "http2", "socks", "rustls-tls","cookies"] }
tokio_kcp = { version = "0.9", optional = true }
tokio-tungstenite = { version = "0.27", optional = true, default-features = false, features = ["connect", "__rustls-tls"] }
tokio-util = { version = "0.7", optional = true, features = ["io"] }
bytes = { version = "1", optional = true, features = ["serde"] }
futures = { version = "0.3", optional = true }
